Fixed some layout issues

--- a/src/app/Components/TestimonialContainer/TestimonialContainer.css
+++ b/src/app/Components/TestimonialContainer/TestimonialContainer.css
@@ -41,7 +41,6 @@
 
 .slick-list {
     padding: 0px !important;
-    margin-left: 20px !important;
 }
 
 
