--- a/src/app/Components/Testimonials/Testimonials.css
+++ b/src/app/Components/Testimonials/Testimonials.css
@@ -304,4 +304,8 @@
     font-size: 1rem;
   }
 
+  .testimonials-section-content {
+    margin-left: 20px;
+  }
+
 }
